@@ -1,4 +1,4 @@
 from .lgxDevice import LGXDevice
 from .eip import PLC
-__version_info__ = (0, 6, 3)
+__version_info__ = (0, 6, 4)
 __version__ = '.'.join(str(x) for x in __version_info__)
