@@ -1,3 +1,6 @@
+03/24/20
+  - Added the ability to route packets through a CLX rack, upped to 0.6.4
+
 03/20/20
   - Impoved lost connections and error handling, upped version to 0.6.3
 
